--- a/Comfy/user.css
+++ b/Comfy/user.css
@@ -1,1 +1,1 @@
-@import url("https://raw.githubusercontent.com/NotMephisto/Comfy-matugen/refs/heads/main/Comfy/app.css");
+@import url("https://comfy-themes.github.io/Spicetify/Comfy/app.css");
